double scrollbar fix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -127,7 +127,7 @@ html, body {
     min-width: 100vw;
     max-width: 100vw;
     display: grid;
-    grid-template-rows: 20% auto 15%;
+    grid-template-rows: 10vw auto 8vw;
 }
 
 .pages-row-one {
